# docs/swagger.json
@@ -39,6 +39,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth  \u003c-- NUEVA LÍNEA AÑADIDA": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -66,12 +71,23 @@
                         "schema": {
                             "$ref": "#/definitions/models.Cliente"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.APIError"
+                        }
                     }
                 }
             }
         },
         "/clientes/masivo": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth  \u003c-- NUEVA LÍNEA AÑADIDA": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -103,12 +119,23 @@
                             "type": "object",
                             "additionalProperties": true
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.APIError"
+                        }
                     }
                 }
             }
         },
         "/clientes/{id}": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth  \u003c-- NUEVA LÍNEA AÑADIDA": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -143,10 +170,21 @@
                         "schema": {
                             "$ref": "#/definitions/models.Cliente"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.APIError"
+                        }
                     }
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth  \u003c-- NUEVA LÍNEA AÑADIDA": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -169,6 +207,12 @@
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.APIError"
                         }
                     }
                 }
@@ -195,6 +239,30 @@
                     "type": "string"
                 }
             }
+        },
+        "utils.APIError": {
+            "type": "object",
+            "properties": {
+                "detail": {
+                    "type": "string",
+                    "example": "El campo 'email' es obligatorio"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Datos de entrada inválidos"
+                },
+                "status": {
+                    "type": "integer",
+                    "example": 400
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "X-API-Key",
+            "in": "header"
         }
     }
 }
